2010-06-01  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Fixed 'Bug
	  610204 - Find-as-you-type-bar with Chrome style broke a good
	  use case of the find-bar with Firefox style'.

2010-05-29  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs:
	* MonoDevelop.SourceEditor/MessageBubbleTextMarker.cs: Fixed
	  'Bug 610099 - Typing in lines with bubbles very slow'.


2010-05-28  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs:
	  Generalized method.

2010-05-28  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs:
	  Generalized method.

2010-05-27  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/MessageBubbleTextMarker.cs: Worked
	  on message bubbles.

2010-05-27  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/MessageBubbleTextMarker.cs: Removed
	  the message bubble focus inactive toggle (it's still
	  inactive, if the line has changed).

2010-05-27  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/MessageBubbleTextMarker.cs: Removed
	  debug message.

2010-05-27  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Removed
	  message box which informs of undo past save point.

2010-05-27  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/MessageBubbleTextMarker.cs: fixed
	  little selection drawing issue.

2010-05-26  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.SourceEditor/MessageBubbleHighlightPopupWindow.cs:
	  Fix text alignment.

2010-05-26  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.SourceEditor/MessageBubbleHighlightPopupWindow.cs:
	  Track API.

2010-05-26  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.SourceEditor/MessageBubbleHighlightPopupWindow.cs:
	  Use new BounceFadePopupWindow class.

2010-05-26  Mike Krüger  <mkrueger@novell.com>
