@@ -1199,7 +1199,8 @@ namespace MonoDevelop.SourceEditor
 			if (focus) {
 				TextEditor.GrabFocus ();
 			}
-			TextEditor.CenterToCaret ();
+			if (searchAndReplaceWidget != null)
+				TextEditor.CenterToCaret ();
 			if (result == null) {
 				IdeApp.Workbench.StatusBar.ShowError (GettextCatalog.GetString ("Search pattern not found"));
 			} else if (result.SearchWrapped) {
@@ -1223,7 +1224,8 @@ namespace MonoDevelop.SourceEditor
 			if (focus) {
 				TextEditor.GrabFocus ();
 			}
-			TextEditor.CenterToCaret ();
+			if (searchAndReplaceWidget != null)
+				TextEditor.CenterToCaret ();
 			if (result == null) {
 				IdeApp.Workbench.StatusBar.ShowError (GettextCatalog.GetString ("Search pattern not found"));
 			} else if (result.SearchWrapped) {
